// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkboxes > should match the snapshot - checked 1`] = `
<div
  class="nhsuk-form-group nhsuk-form-group--error"
>
  <label
    class="nhsuk-label"
    for="checkboxes_:r3:"
    id="checkboxes_:r3:--label"
  >
    Label
  </label>
  <span
    class="nhsuk-error-message"
    for="checkboxes_:r3:"
    id="checkboxes_:r3:--error-message"
  >
    <span
      class="nhsuk-u-visually-hidden"
    >
      Error
      :
    </span>
    Error
  </span>
  <div
    aria-labelledby="checkboxes_:r3:--label"
    class="nhsuk-checkboxes nhsuk-checkboxes--conditional"
    data-testid="checkboxes"
    error="Error"
    id="checkboxes_:r3:"
  >
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        checked=""
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r3:-1"
        name="checkboxes_:r3:"
        type="checkbox"
        value="1"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r3:-1"
        id="checkboxes_:r3:-1--label"
      >
        Option 1
      </label>
      <div
        class="nhsuk-hint nhsuk-checkboxes__hint"
      >
        Hint
      </div>
    </div>
    <div
      class="nhsuk-checkboxes__conditional"
    >
      Yay
    </div>
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r3:-2"
        name="checkboxes_:r3:"
        type="checkbox"
        value="2"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r3:-2"
        id="checkboxes_:r3:-2--label"
      >
        Option 2
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkboxes > should match the snapshot - clicked 1`] = `
<div
  class="nhsuk-form-group nhsuk-form-group--error"
>
  <label
    class="nhsuk-label"
    for="checkboxes_:r4:"
    id="checkboxes_:r4:--label"
  >
    Label
  </label>
  <span
    class="nhsuk-error-message"
    for="checkboxes_:r4:"
    id="checkboxes_:r4:--error-message"
  >
    <span
      class="nhsuk-u-visually-hidden"
    >
      Error
      :
    </span>
    Error
  </span>
  <div
    aria-labelledby="checkboxes_:r4:--label"
    class="nhsuk-checkboxes nhsuk-checkboxes--conditional"
    data-testid="checkboxes"
    error="Error"
    id="checkboxes_:r4:"
  >
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r4:-1"
        name="checkboxes_:r4:"
        type="checkbox"
        value="1"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r4:-1"
        id="checkboxes_:r4:-1--label"
      >
        Option 1
      </label>
      <div
        class="nhsuk-hint nhsuk-checkboxes__hint"
      >
        Hint
      </div>
    </div>
    <div
      class="nhsuk-checkboxes__conditional"
    >
      Yay
    </div>
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r4:-2"
        name="checkboxes_:r4:"
        type="checkbox"
        value="2"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r4:-2"
        id="checkboxes_:r4:-2--label"
      >
        Option 2
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkboxes > should match the snapshot - conditional 1`] = `
<div
  class="nhsuk-form-group nhsuk-form-group--error"
>
  <label
    class="nhsuk-label"
    for="checkboxes_:r2:"
    id="checkboxes_:r2:--label"
  >
    Label
  </label>
  <span
    class="nhsuk-error-message"
    for="checkboxes_:r2:"
    id="checkboxes_:r2:--error-message"
  >
    <span
      class="nhsuk-u-visually-hidden"
    >
      Error
      :
    </span>
    Error
  </span>
  <div
    aria-labelledby="checkboxes_:r2:--label"
    class="nhsuk-checkboxes nhsuk-checkboxes--conditional"
    data-testid="checkboxes"
    error="Error"
    id="checkboxes_:r2:"
  >
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        checked=""
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r2:-1"
        name="checkboxes_:r2:"
        type="checkbox"
        value="1"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r2:-1"
        id="checkboxes_:r2:-1--label"
      >
        Option 1
      </label>
      <div
        class="nhsuk-hint nhsuk-checkboxes__hint"
      >
        Hint
      </div>
    </div>
    <div
      class="nhsuk-checkboxes__conditional"
    >
      Yay
    </div>
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r2:-2"
        name="checkboxes_:r2:"
        type="checkbox"
        value="2"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r2:-2"
        id="checkboxes_:r2:-2--label"
      >
        Option 2
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkboxes > should match the snapshot - hint, error 1`] = `
<div
  class="nhsuk-form-group nhsuk-form-group--error"
>
  <label
    class="nhsuk-label"
    for="checkboxes_:r1:"
    id="checkboxes_:r1:--label"
  >
    Label
  </label>
  <span
    class="nhsuk-error-message"
    for="checkboxes_:r1:"
    id="checkboxes_:r1:--error-message"
  >
    <span
      class="nhsuk-u-visually-hidden"
    >
      Error
      :
    </span>
    Error
  </span>
  <div
    aria-labelledby="checkboxes_:r1:--label"
    class="nhsuk-checkboxes"
    data-testid="checkboxes"
    error="Error"
    id="checkboxes_:r1:"
  >
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r1:-1"
        name="checkboxes_:r1:"
        type="checkbox"
        value="1"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r1:-1"
        id="checkboxes_:r1:-1--label"
      >
        Option 1
      </label>
      <div
        class="nhsuk-hint nhsuk-checkboxes__hint"
      >
        Hint
      </div>
    </div>
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r1:-2"
        name="checkboxes_:r1:"
        type="checkbox"
        value="2"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r1:-2"
        id="checkboxes_:r1:-2--label"
      >
        Option 2
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkboxes > should match the snapshot 1`] = `
<div
  class="nhsuk-form-group"
>
  <label
    class="nhsuk-label"
    for="checkboxes_:r0:"
    id="checkboxes_:r0:--label"
  >
    Label
  </label>
  <div
    aria-labelledby="checkboxes_:r0:--label"
    class="nhsuk-checkboxes"
    data-testid="checkboxes"
    id="checkboxes_:r0:"
  >
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r0:-1"
        name="checkboxes_:r0:"
        type="checkbox"
        value="1"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r0:-1"
        id="checkboxes_:r0:-1--label"
      >
        Option 1
      </label>
    </div>
    <div
      class="nhsuk-checkboxes__item"
    >
      <input
        class="nhsuk-checkboxes__input"
        id="checkboxes_:r0:-2"
        name="checkboxes_:r0:"
        type="checkbox"
        value="2"
      />
      <label
        class="nhsuk-label nhsuk-checkboxes__label"
        for="checkboxes_:r0:-2"
        id="checkboxes_:r0:-2--label"
      >
        Option 2
      </label>
    </div>
  </div>
</div>
`;
